--- a/app/src/main/res/layout/card_available.xml
+++ b/app/src/main/res/layout/card_available.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="12dp">
 
     <TextView
@@ -26,6 +26,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Phase"
+        android:textStyle="bold"
+        android:textSize="16sp"
         android:id="@+id/phase"/>
     <TextView
         android:layout_width="match_parent"
